css/style.css
body{
	-webkit-animation: pulse 30s infinite; animation: pulse 30s infinite;
}

@-webkit-keyframes pulse{
	0%{background:#03A9F4;}
	25%{background:#00E676;}
	50%{background:#2dace3;}
	75%{background:#4CAF50;}
	90%{background:#006064;}
	100%{background:#03A9F4;
}

@keyframes pulse{
	0%{background:#03A9F4;}
	25%{background:#00E676;}
	50%{background:#2dace3;}
	75%{background:#4CAF50;}
	90%{background:#006064;}
	100%{background:#03A9F4;
}

#wrapper{
	position:relative;
	overflow-y: hidden;
	overflow-x: hidden;
	height: 100%;
	width: 100%;
}

.social {
    margin: 0;
    padding: 0;
    text-align: center;
}

.social ul {
    margin: 0;
    padding: 5px;
}

.social ul li {
    margin: 5px;
    list-style: none outside none;
    display: inline-block;
}

.social i {
    width: 40px;
    height: 40px;
    color: #FFF;
    background-color: #909AA0;
    font-size: 22px;
    text-align:center;
    padding-top: 12px;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    -o-border-radius: 50%;
    transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
    -webkit-transition: all ease 0.3s;
    -o-transition: all ease 0.3s;
    -ms-transition: all ease 0.3s;
}

.social i:hover {
    color: #FFF;
    text-decoration: none;
    transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
    -webkit-transition: all ease 0.3s;
    -o-transition: all ease 0.3s;
    -ms-transition: all ease 0.3s;
}

.social .fa-github:hover {
    background: #343434;
}

.social .fa-twitter:hover {
    background: #00ABE3;
}

.social .fa-tumblr:hover { /* round tumblr icon*/
    background: #3a5876;
}

.social .fa-soundcloud:hover{
	background: #FF4000;
}

.social .fa-gamepad:hover{
	background: #7DC265;
}

header .container{
	padding-top: 75px;
}
	img{
	vertical-align: middle;
	width: 250px;
	height: 250px;
	border-radius: 50%;
}
.intro-text{text-align: center; color: white;}

.name{
	display: block;
	font-weight: 700;
	font-size: 2em;
	text-transform: uppercase;
}
.skills{
	font-size: 1.25em;
	font-weight: 300;
}

